--- a/installer/resources/readme/readme_de.html
+++ b/installer/resources/readme/readme_de.html
@@ -2,11 +2,11 @@
 <div align="right">
 <div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr"><img src="/flags.jsp?c=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=ru"><img src="/flags.jsp?c=ru" title="Русский" alt="Русский"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
-<div class="welcome"><h2>Willkommen zu I2P!</h2></div>
-<p>Wenn Du gerade I2P gestartet hast, sollten die "Active:" Zahlen links in den n&auml;chsten paar Minuten anwachsen und Du siehst dann dort ein "shared clients" lokales Ziel gelistet (falls nicht, <a href="#trouble">siehe Unten</a>). Sobald das erscheint, kannst Du:</p>
+<div class="welcome"><h2>Willkommen im I2P!</h2></div>
+<p>Wenn Du I2P gerade gestartet hast, sollten die "Active:"-Zahlen links in den n&auml;chsten paar Minuten anwachsen, und Du siehst dann dort ein "shared clients" lokales Ziel gelistet (falls nicht, <a href="#trouble">siehe Unten</a>). Sobald das erscheint, kannst Du:</p>
 <ul>
- <li><b>"Eepsites" besuchen</b> - In I2P sind anonym gehostete Websites - 
-     Stelle Deinen Browser so ein, &uuml;ber den <b>HTTP proxy: 127.0.0.1 port 4444</b> zu surfen, dann besuche eine Eepsite:<br>
+ <li><b>"Eepsites" besuchen</b> - In I2P gibt es anonym gehostete Websites: 
+     Konfiguriere Deinen Browser, &uuml;ber den <b>HTTP proxy: 127.0.0.1 port 4444</b> zu surfen, dann besuche eine Eepsite:<br>
      <ul class="links">
          <li><a href="http://forum.i2p/">forum.i2p</a>: Eine sichere und anonyme Verbindung zu <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
          <li><a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a> und der Spiegel <a href="http://i2p-projekt.i2p/index_de.html">i2p-projekt.i2p</a>:
@@ -14,14 +14,14 @@
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: Eine anonym gehostete Suchseite f&uuml;r Eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: Ugha's Eepsite, ein &ouml;ffentliches Wiki mit vielen Links</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: Freenet proxy</li>
-	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Software Archive und Informationen zu I2P</li>
+	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Software Archive und Informationen zu I2P (mit BitTorrent-Klienten, I2P-Messenger, I2P-Bote, ...</li>
          <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: Anonymer Pastebin</li>
 	</ul><br />
-     Es gibt viel mehr Eepsites - folge einfach den Links die du findest,
+     Es gibt viel mehr Eepsites - folge einfach den Links, die du findest,
      bookmarke Deine Favoriten und besuche sie oft!</li><br />
- <li class="tidylist"><b>Im Internet surfen</b> - Es gibt einen HTTP "outproxy" in I2P in Deinem
-     HTTP proxy auf Port 4444 - Konfiguriere Deine Browser's Proxy Einstellung 
-     darauf (siehe Oben) und besuche jede normale URL - Deine Anfrage wird 
+ <li class="tidylist"><b>Im Internet surfen</b> - Es gibt in I2P einen HTTP "outproxy". Um ihn zu nutzen, musst du ebenfalls den
+     HTTP-Proxy auf Port 4444 nutzen - Konfiguriere Deine Browser's Proxy Einstellung 
+     darauf (siehe oben) und besuche jede normale URL - Deine Anfrage wird dann anonym 
      durch das I2P Netzwerk geroutet.</li>
  <li class="tidylist"><b>Daten austauschen</b> - Es gibt eine <a href="i2psnark/">Portierung</a> des
      <a href="http://www.klomp.org/snark/">Snark</a> <a href="http://www.bittorrent.com/">BitTorrent</a>
@@ -43,7 +43,7 @@
 
 <h2>Willst Du Deine eigene Eepsite?</h2>
 
-<p>Wir bringen Software mit, damit Du Deine eigene Eepsite laufen lassen kannst 
+<p>I2P kommt mit Software, die es Dir  ermöglicht, Deine eigene Eepsite laufen zu lassen 
    - Eine 
 <a href="http://jetty.mortbay.org/">Jetty</a> Instanz horcht auf 
 <a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a>. Platziere einfach 
@@ -58,21 +58,22 @@
 
 <h2><a name="trouble">Troubleshooting</a></h2>
 
-<p>Sei geduldig - Am Anfang des ersten Starts kann I2P lange brauchen, da es 
+<p>Sei geduldig - Nach dem ersten Start kann I2P lange brauchen, da es 
   dann Verbindungen sucht. Falls nach 30 Minuten Deine 
   "Active: connected/recent" Zahl noch immer weniger als 10 Verbindungen 
   aufzeigt, solltest Du den I2P Port auf Deiner Firewall &ouml;ffnen um 
   f&uuml;r bessere Verbindung zu sorgen. Den bei dir benutzten I2P Port 
   (bei jeder Installation setzt I2P einen anderen) siehst Du auf der 
   <a href="config.jsp">Konfigurationsseite</a>.
-  Wenn Du gar keine Eepsites bekommst (auch nicht 
+  Wenn Du gar keine Eepsites erreichen kannst (auch nicht 
   <a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a>), stelle sicher, dass Dein 
-  Internet Browser auf den Proxy 127.0.0.1 Port 4444 eingestellt ist.
+  Internet Browser auf den Proxy 127.0.0.1 Port 4444 eingestellt ist!
   Vielleicht m&ouml;chtest Du auch die Informationen lesen, die auf der 
-  <a href="http://www.i2p2.i2p/index_de.html">I2P website</a> sind, Nachrichten lesen und 
+  <a href="http://www.i2p2.i2p/index_de.html">I2P website</a> stehen, Nachrichten lesen und 
   ins <a href="http://forum.i2p2.de/">I2P discussion forum</a> posten, oder 
-  chatten auf
+  in
   <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, <a href="irc://127.0.0.1:6668/i2p-de">#i2p-de</a>, <a href="irc://127.0.0.1:6668/i2p">#i2p</a> oder <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
-  beim IRC auf 
+  auf
   <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p 
-  oder irc.freshcoffee.i2p (die verbunden sind).</p><hr /></div>
+  oder irc.freshcoffee.i2p (die verbunden sind) chatten.</p><hr />
+</div>
