--- a/installer/resources/readme/readme_de.html
+++ b/installer/resources/readme/readme_de.html
@@ -3,7 +3,7 @@
 <div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr"><img src="/flags.jsp?c=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=ru"><img src="/flags.jsp?c=ru" title="Русский" alt="Русский"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
 <div class="welcome"><h2>Willkommen im I2P!</h2></div>
-<p>Wenn Du I2P gerade gestartet hast, sollten die "Active:"-Zahlen links in den n&auml;chsten paar Minuten anwachsen, und Du siehst dann dort ein als "gemeinsam benutzt" bezeichnetes lokales Ziel gelistet (falls nicht, <a href="#trouble">siehe Unten</a>). Sobald das erscheint, kannst Du:</p>
+<p>Wenn Du I2P gerade gestartet hast, sollten die "Aktiv:"-Zahlen links in den n&auml;chsten paar Minuten anwachsen, und Du siehst dann dort ein als "versch. Klienten" bezeichnetes lokales Ziel gelistet (falls nicht, <a href="#trouble">siehe unten</a>). Sobald das erscheint, kannst Du:</p>
 <ul>
  <li><b>"Eepsites" besuchen</b> - In I2P gibt es anonym gehostete Websites: 
      Konfiguriere Deinen Browser, &uuml;ber den <b>HTTP-Proxy: 127.0.0.1 Port 4444</b> zu surfen, dann besuche eine Eepsite:<br>
@@ -14,11 +14,11 @@
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: Eine anonym gehostete Suchseite f&uuml;r Eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: Ugha's Eepsite, ein &ouml;ffentliches Wiki mit vielen Links</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: ein Freenet-Proxy</li>
-	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Software-Archive und Informationen zu I2P (mit BitTorrent-Klienten, I2P-Messenger, I2P-Bote, ...)</li>
+	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Software-Archiv und Informationen zu I2P (mit BitTorrent-Klienten, I2P-Messenger, I2P-Bote, ...)</li>
          <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: Anonymer Pastebin</li>
 	</ul><br />
      Es gibt viele andere Eepsites - folge einfach den Links, die du findest,
-     bookmarke Deine Favoriten und besuche sie oft!</li><br />
+     setze Lesezeichen für Deine Favoriten, und besuche sie oft!</li><br />
  <li class="tidylist"><b>Im Internet surfen</b> - Es gibt in I2P einen HTTP-"Outproxy". Um ihn zu nutzen, kannst du ebenfalls den
      HTTP-Proxy auf Port 4444 verwenden - Konfiguriere Deines Browsers Proxy-Einstellungen 
      darauf (siehe oben) und besuche jede normale URL - Deine Anfrage wird dann anonym 
@@ -26,42 +26,43 @@
  <li class="tidylist"><b>Daten austauschen</b> - Es gibt eine <a href="i2psnark/">Portierung</a> des
      <a href="http://www.klomp.org/snark/">Snark</a> <a href="http://www.bittorrent.com/">BitTorrent</a>-Klienten.</li>
  <li class="tidylist"><b>Anonyme Email</b> - Postman hat ein Email-System aufgebaut, das 
-     kompatibel zu normalen  Email-Clients (POP3/SMTP) ist, und welches es erlaubt, 
+     kompatibel zu normalen  Email-Klienten (POP3/SMTP) ist, und welches es erlaubt, 
      Emails innerhalb von I2P sowie Emails von und ins normale Internet zu 
-     schicken!  Hole Dir Dein Emailkonto auf <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
-     Im Verbund damit haben wir <a href="/susimail/susimail">susimail</a>, ein 
-     browserbasierter, anonymer POP3/SMTP-Klient, fertig eingerichtet 
+     schicken.  Hole Dir Dein Emailkonto auf <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
+     Im Verbund damit gibt es <a href="/susimail/susimail">susimail</a>, einen 
+     browserbasierten anonymen POP3/SMTP-Klienten, fertig eingerichtet 
      f&uuml;r Postmans Email-Service.</li>
  <li class="tidylist"><b>Anonymer Chat</b> - Starte Deinen Lieblings-IRC-Klienten und verbinde ihn 
-     mit dem Server <b>127.0.0.1 Port 6668</b>.  Das bringt Dich auf auf einen 
-     von zwei anonym gehosteten IRC-Servern - aber weder Du noch die anderen Benutzer wissen, wer 
+     mit dem Server unter <b>127.0.0.1 auf Port 6668</b>.  Das bringt Dich auf auf einen 
+     von zwei anonym gehosteten IRC-Servern - und weder Du noch die anderen Benutzer wissen, wer 
      der jeweils andere ist, nicht einmal der Server-Administrator.</li>
- <li class="tidylist"><b>Anonymer Blog</b> - Probiere <a href="http://syndie.i2p2.de/">Syndie</a> aus</li>
+ <li class="tidylist"><b>Anonymer Blog</b> - Probiere <a href="http://syndie.i2p2.de/">Syndie</a> aus!</li>
  <li class="tidylist">und vieles mehr</li>
 </ul>
 
 <h2>Willst Du Deine eigene Eepsite?</h2>
 
 <p>I2P kommt mit Software, die es Dir  erm&ouml;glicht, Deine eigene Eepsite laufen zu lassen 
-   - Eine 
+   : Eine 
 <a href="http://jetty.mortbay.org/">Jetty</a>-Instanz horcht auf 
 <a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a>. Platziere einfach 
    Deine Dateien im Verzeichnis <code>eepsite/docroot/</code> (oder jedes 
    Standard-JSP/Servlet <code>.war</code> unter <code>eepsite/webapps</code>, 
    CGI Scripte unter <code>eepsite/cgi-bin</code>) und schon sind sie 
-   verf&uuml;gbar.  Nach dem Start des <a href="/i2ptunnel/">Eepsite Tunnels</a>,
+   verf&uuml;gbar.  Nach dem Starten des <a href="/i2ptunnel/">Eepseiten-Tunnels</a>,
    der darauf zeigt, ist Deine Eepsite f&uuml;r andere verf&uuml;gbar. 
    Detailierte Instruktionen zum Start Deiner eigenen Eepsite sind auf
-   <a href="http://127.0.0.1:7658/">Deiner tempor&auml;ren Eepsite</a>.
+   <a href="http://127.0.0.1:7658/">Deiner tempor&auml;ren Eepseite</a>.
 </p>
 
 <h2><a name="trouble">Problembehebung</a></h2>
 
-<p>Hab Geduld, denn nach dem ersten Start kann I2P lange brauchen, da es 
-  dann Verbindungen sucht und das Netzwerk kennenlernen muss. Falls nach 30 Minuten Deine 
-  die Zahl deiner aktiven Verbindungen (im Seitenpanel unter "Teilnehmer" die Zahl hinter "Aktiv:") noch immer geringer als 10 ist,  
+<p>Hab Geduld, denn nach dem ersten Start kann I2P noch etwas langsam sein. 
+  Dein Router braucht etwas Zeit, um Verbindungen zu suchen und das Netzwerk kennenzulernen. 
+  Falls nach 30 Minuten die Zahl Deiner aktiven Verbindungen (im Seitenpanel unter 
+  "Teilnehmer" die Zahl hinter "Aktiv:") noch immer geringer als 10 ist,  
   solltest Du den I2P-Port auf Deiner Firewall &ouml;ffnen, um 
-  f&uuml;r bessere Verbindung zu sorgen. Den bei dir von I2P benutzten Port 
+  f&uuml;r eine bessere Verbindung zu sorgen. Den von I2P bei Dir benutzten Port 
   (bei jeder Installation setzt I2P einen anderen) siehst Du auf der 
   <a href="config.jsp">Konfigurationsseite</a>.
   Wenn Du gar keine Eepsites erreichen kannst (auch nicht 
@@ -70,9 +71,11 @@
   Vielleicht m&ouml;chtest Du auch die Informationen lesen, die auf der 
   <a href="http://www.i2p2.i2p/index_de.html">I2P-Website</a> stehen, Nachrichten lesen und 
   im <a href="http://forum.i2p2.de/">I2P-Forum</a> posten, oder 
-  in
-  <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, <a href="irc://127.0.0.1:6668/i2p-de">#i2p-de</a>, <a href="irc://127.0.0.1:6668/i2p">#i2p</a> oder <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
+  im offiziellen deutschsprachigen Support-Channel
+  <a href="irc://127.0.0.1:6668/i2p-de">#i2p-de</a>, dem offiziellen internationalen Support-Channel 
+  <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, 
+  in <a href="irc://127.0.0.1:6668/i2p">#i2p</a> oder in <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
   auf
   irc.postman.i2p 
-  oder irc.freshcoffee.i2p chatten. (Beide unter <a href="irc://localhost:6668">irc://localhost:6668</a> erreichbar; die Server sind verbunden.) Wenn Du keinen Zugriff auf I2P hast, kannst du #i2p, #i2p-help und #i2p-de auch auf <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a> erreichen, dann allerdings nicht anonym.</p><hr />
+  bzw. irc.freshcoffee.i2p chatten. (Beide unter <a href="irc://localhost:6668">irc://localhost:6668</a> erreichbar; die Server sind verbunden.) Wenn Du keinen Zugriff auf I2P hast, kannst du #i2p, #i2p-help und #i2p-de auch auf <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a> erreichen, dann allerdings nicht anonym.</p><hr />
 </div>
