disapproval of revision '7c7c3832c57db0fee96000f6cf612d1443b0fc85'
Monotone-Parent: 7c7c3832c57db0fee96000f6cf612d1443b0fc85
Monotone-Revision: 2b8838a0f68444e41850b58cf41a22a48126f328

Monotone-Author: m1xxy@mail.i2p
Monotone-Date: 2010-11-12T01:25:49
Monotone-Date: 2010-11-12T01:29:46
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme_de.html
+++ b/installer/resources/readme/readme_de.html
@@ -1,24 +1,24 @@
 <div lang="de">
 <div align="right">
-<div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr"><img src="/flags.jsp?c=fr" title="Français" alt="Français"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=ru"><img src="/flags.jsp?c=ru" title="Ð&nbsp;Ñ’ÑÑÐºÐ¸Ð¹" alt="Ð&nbsp;Ñ’ÑÑÐºÐ¸Ð¹"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
+<div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr"><img src="/flags.jsp?c=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=ru"><img src="/flags.jsp?c=ru" title="Ð ÑƒÑÑÐºÐ¸Ð¹" alt="Ð ÑƒÑÑÐºÐ¸Ð¹"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
 <div class="welcome"><h2>Willkommen im I2P!</h2></div>
-<p>Wenn Du I2P gerade gestartet hast, sollten die "Aktiv:"-Zahlen links in den nächsten paar Minuten anwachsen, und Du siehst dann dort ein als "versch. Klienten" bezeichnetes lokales Ziel gelistet (falls nicht, <a href="#trouble">siehe unten</a>). Sobald das erscheint, kannst Du:</p>
+<p>Wenn Du I2P gerade gestartet hast, sollten die "Aktiv:"-Zahlen links in den n&auml;chsten paar Minuten anwachsen, und Du siehst dann dort ein als "versch. Klienten" bezeichnetes lokales Ziel gelistet (falls nicht, <a href="#trouble">siehe unten</a>). Sobald das erscheint, kannst Du:</p>
 <ul>
  <li><b>"Eepseiten" besuchen</b> - In I2P gibt es anonym gehostete Websites: 
-     Konfiguriere Deinen Browser, über den <b>HTTP-Proxy: 127.0.0.1 Port 4444</b> zu surfen, dann besuche eine Eepseite:<br>
+     Konfiguriere Deinen Browser, &uuml;ber den <b>HTTP-Proxy: 127.0.0.1 Port 4444</b> zu surfen, dann besuche eine Eepseite:<br>
      <ul class="links">
          <li><a href="http://forum.i2p/">forum.i2p</a>: Eine sichere und anonyme Verbindung zu <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
          <li><a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a> und der Spiegel <a href="http://i2p-projekt.i2p/index_de.html">i2p-projekt.i2p</a>:
               Sichere und anonyme Verbindungen zu <a href="http://www.i2p2.de/index_de.html">www.i2p2.de</a></li>
-         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: Eine anonym gehostete Suchseite für Eepseiten</li>
-         <li><a href="http://ugha.i2p/">ugha.i2p</a>: Ugha's Eepseite, ein öffentliches Wiki mit vielen Links</li>
+         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: Eine anonym gehostete Suchseite f&uuml;r Eepseiten</li>
+         <li><a href="http://ugha.i2p/">ugha.i2p</a>: Ugha's Eepseite, ein &ouml;ffentliches Wiki mit vielen Links</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: ein Freenet-Proxy</li>
-	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Software-Archiv und Informationen zu I2P (mit BitTorrent-Klienten, iMule, I2PFox, I2P-Messenger, ...)</li>
+	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Software-Archiv und Informationen zu I2P (mit BitTorrent-Klienten, I2P-Messenger, I2P-Bote, ...)</li>
          <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: Anonymer Pastebin</li>
-	</ul><br>
+	</ul><br />
      Es gibt viele andere Eepseiten - folge einfach den Links, die du findest,
-     setze Lesezeichen fÃ¼r Deine Favoriten, und besuche sie oft!</li><br>
+     setze Lesezeichen fÃ¼r Deine Favoriten, und besuche sie oft!</li><br />
  <li class="tidylist"><b>Im Internet surfen</b> - Es gibt in I2P einen HTTP-"Outproxy". Um ihn zu nutzen, kannst du ebenfalls den
      HTTP-Proxy auf Port 4444 verwenden - Konfiguriere Deines Browsers Proxy-Einstellungen 
      darauf (siehe oben) und besuche jede normale URL - Deine Anfrage wird dann anonym 
@@ -31,7 +31,7 @@
      schicken.  Hole Dir Dein Emailkonto auf <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
      Im Verbund damit gibt es <a href="/susimail/susimail">susimail</a>, einen 
      browserbasierten anonymen POP3/SMTP-Klienten, fertig eingerichtet 
-     für Postmans Email-Service.<br>Oder probier unseren neues serverloses, Ende-zu-Ende-verschlüsseltes Emailsystem <a href="http://tjgidoycrw6s3guetge3kvrvynppqjmvqsosmtbmgqasa6vmsf6a.b32.i2p/">I2P-Bote</a> (mit webinterface), erhältlich als Plugin!<br></li>
+     f&uuml;r Postmans Email-Service.</li>
  <li class="tidylist"><b>Anonymer Chat</b> - Starte Deinen Lieblings-IRC-Klienten und verbinde ihn 
      mit dem Server unter <b>127.0.0.1 auf Port 6668</b>.  Das bringt Dich auf auf einen 
      von zwei anonym gehosteten IRC-Servern - und weder Du noch die anderen Benutzer wissen, wer 
@@ -42,17 +42,17 @@
 
 <h2>Willst Du Deine eigene Eepseite?</h2>
 
-<p>Das I2P-Paket beinhaltet Software, die es Dir  ermöglicht, Deine eigene Eepseite zu betreiben 
+<p>Das I2P-Paket beinhaltet Software, die es Dir  erm&ouml;glicht, Deine eigene Eepseite zu betreiben 
    : Eine 
 <a href="http://jetty.mortbay.org/">Jetty</a>-Instanz horcht auf 
 <a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a>. Platziere einfach 
    Deine Dateien im Verzeichnis <code>eepsite/docroot/</code> (oder jedes 
    Standard-JSP/Servlet <code>.war</code> unter <code>eepsite/webapps</code>, 
    CGI Scripte unter <code>eepsite/cgi-bin</code>) und schon sind sie 
-   verfügbar.  Nach dem Starten des <a href="/i2ptunnel/">Eepseiten-Tunnels</a>,
-   der darauf zeigt, ist Deine Eepseite für andere verfügbar. 
+   verf&uuml;gbar.  Nach dem Starten des <a href="/i2ptunnel/">Eepseiten-Tunnels</a>,
+   der darauf zeigt, ist Deine Eepseite f&uuml;r andere verf&uuml;gbar. 
    Detailierte Instruktionen zum Start Deiner eigenen Eepseite findest Du auf
-   <a href="http://127.0.0.1:7658/">Deiner temporären Eepseite</a>.
+   <a href="http://127.0.0.1:7658/">Deiner tempor&auml;ren Eepseite</a>.
 </p>
 
 <h2><a name="trouble">Problembehebung</a></h2>
@@ -61,14 +61,14 @@
   Dein Router braucht etwas Zeit, um Verbindungen zu suchen und das Netzwerk kennenzulernen. 
   Falls nach 30 Minuten die Zahl Deiner aktiven Verbindungen (im Seitenpanel unter 
   "Teilnehmer", die Zahl hinter "Aktiv:") noch immer geringer als 10 ist,  
-  solltest Du den I2P-Port auf Deiner Firewall öffnen, um 
-  für eine bessere Verbindung zu sorgen. Den von I2P bei Dir benutzten Port 
+  solltest Du den I2P-Port auf Deiner Firewall &ouml;ffnen, um 
+  f&uuml;r eine bessere Verbindung zu sorgen. Den von I2P bei Dir benutzten Port 
   (bei jeder Installation setzt I2P einen anderen) siehst Du auf der 
   <a href="config.jsp">Konfigurationsseite</a>.
   Wenn Du gar keine Eepseiten erreichen kannst (auch nicht 
   <a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a>), dann stell sicher, dass Dein 
   Internet-Browser auf den Proxy 127.0.0.1 Port 4444 eingestellt ist!
-  Vielleicht möchtest Du auch die Informationen lesen, die auf der 
+  Vielleicht m&ouml;chtest Du auch die Informationen lesen, die auf der 
   <a href="http://www.i2p2.i2p/index_de.html">I2P-Website</a> stehen, Nachrichten lesen und 
   im <a href="http://forum.i2p2.de/">I2P-Forum</a> posten, oder 
   im offiziellen deutschsprachigen Support-Channel
@@ -77,5 +77,5 @@
   in <a href="irc://127.0.0.1:6668/i2p">#i2p</a> oder in <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
   auf
   irc.postman.i2p 
-  bzw. irc.freshcoffee.i2p chatten. (Beide unter <a href="irc://localhost:6668">irc://localhost:6668</a> erreichbar; die Server sind verbunden.) Wenn Du keinen Zugriff auf I2P hast, kannst du #i2p, #i2p-help und #i2p-de auch auf <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a> erreichen, dann allerdings nicht anonym.</p><hr>
+  bzw. irc.freshcoffee.i2p chatten. (Beide unter <a href="irc://localhost:6668">irc://localhost:6668</a> erreichbar; die Server sind verbunden.) Wenn Du keinen Zugriff auf I2P hast, kannst du #i2p, #i2p-help und #i2p-de auch auf <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a> erreichen, dann allerdings nicht anonym.</p><hr />
 </div>
