--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -29,7 +29,7 @@ up, you can:</p>
       <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: 
         Freenet proxy</li>
       <li><a href="http://echelon.i2p">echelon.i2p</a>: software 
-        archive and information for I2P</li>
+        archive (I2PFox, iMule, I2P-Messenger, ... ) and information for I2P</li>
       <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: secure and 
         anonymous paste service.</li>
     </ul><br>
@@ -49,7 +49,10 @@ up, you can:</p>
         email within I2P as well as mail from and to the normal internet! get 
         your account at <a href="http://hq.postman.i2p/">hq.postman.i2p</a>. We 
         bundle <a href="/susimail/susimail">susimail</a>, a web based anonymity-oriented 
-        pop3/smtp client configured to access postman's mail services.</li>
+        pop3/smtp client configured to access postman's mail services. 
+	<br>Alternatively, you can try out our new serverless, end-to-end encrypted e-mail system 
+	<a href="http://tjgidoycrw6s3guetge3kvrvynppqjmvqsosmtbmgqasa6vmsf6a.b32.i2p/">I2P-Bote</a> 
+	(with webinterface), installable as a plugin.<br></li>
       <li class="tidylist"><b>chat anonymously</b> - fire up your own IRC client 
         and connect to the server at <b>127.0.0.1 port 6668</b>. This points at 
         one of two anonymously hosted IRC servers, but neither you nor they know 
