--- a/installer/resources/readme/readme_de.html
+++ b/installer/resources/readme/readme_de.html
@@ -14,11 +14,11 @@
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: Eine anonym gehostete Suchseite f&uuml;r Eepseiten</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: Ugha's Eepseite, ein &ouml;ffentliches Wiki mit vielen Links</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: ein Freenet-Proxy</li>
-	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Software-Archiv und Informationen zu I2P (mit BitTorrent-Klienten, I2P-Messenger, I2P-Bote, ...)</li>
+	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Softwarearchiv und Informationen zu I2P (mit BitTorrent-Klienten, iMule, I2PFox, I2P-Messenger, ...)</li>
          <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: Anonymer Pastebin</li>
 	</ul><br />
      Es gibt viele andere Eepseiten - folge einfach den Links, die du findest,
-     setze Lesezeichen für Deine Favoriten, und besuche sie oft!</li><br />
+     setze Lesezeichen f&uuml;r Deine Favoriten, und besuche sie oft!</li><br />
  <li class="tidylist"><b>Im Internet surfen</b> - Es gibt in I2P einen HTTP-"Outproxy". Um ihn zu nutzen, kannst du ebenfalls den
      HTTP-Proxy auf Port 4444 verwenden - Konfiguriere Deines Browsers Proxy-Einstellungen 
      darauf (siehe oben) und besuche jede normale URL - Deine Anfrage wird dann anonym 
@@ -31,7 +31,8 @@
      schicken.  Hole Dir Dein Emailkonto auf <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
      Im Verbund damit gibt es <a href="/susimail/susimail">susimail</a>, einen 
      browserbasierten anonymen POP3/SMTP-Klienten, fertig eingerichtet 
-     f&uuml;r Postmans Email-Service.</li>
+     f&uuml;r Postmans Email-Service. 
+     <br>Oder probier unser neues serverloses und Ende-zu-Ende-verschl&uuml;sseltes Emailsystem <a href="http://tjgidoycrw6s3guetge3kvrvynppqjmvqsosmtbmgqasa6vmsf6a.b32.i2p/">I2P-Bote</a> (mit webinterface) aus, welches als Plugin erh&auml;ltlich ist!</li>
  <li class="tidylist"><b>Anonymer Chat</b> - Starte Deinen Lieblings-IRC-Klienten und verbinde ihn 
      mit dem Server unter <b>127.0.0.1 auf Port 6668</b>.  Das bringt Dich auf auf einen 
      von zwei anonym gehosteten IRC-Servern - und weder Du noch die anderen Benutzer wissen, wer 
