--- a/installer/resources/readme/readme_de.html
+++ b/installer/resources/readme/readme_de.html
@@ -32,7 +32,7 @@
      Im Verbund damit gibt es <a href="/susimail/susimail">susimail</a>, einen 
      browserbasierten anonymen POP3/SMTP-Klienten, fertig eingerichtet 
      f&uuml;r Postmans Email-Service. 
-     <br>Oder probier unser neues serverloses und Ende-zu-Ende-verschl&uuml;sseltes Emailsystem <a href="http://tjgidoycrw6s3guetge3kvrvynppqjmvqsosmtbmgqasa6vmsf6a.b32.i2p/">I2P-Bote</a> (mit webinterface) aus, welches als Plugin erh&auml;ltlich ist!</li>
+     <br>Oder probier unser neues serverloses und Ende-zu-Ende-verschl&uuml;sseltes Emailsystem <a href="http://tjgidoycrw6s3guetge3kvrvynppqjmvqsosmtbmgqasa6vmsf6a.b32.i2p/">I2P-Bote</a> (mit Webinterface) aus, welches als Plugin erh&auml;ltlich ist!</li>
  <li class="tidylist"><b>Anonymer Chat</b> - Starte Deinen Lieblings-IRC-Klienten und verbinde ihn 
      mit dem Server unter <b>127.0.0.1 auf Port 6668</b>.  Das bringt Dich auf auf einen 
      von zwei anonym gehosteten IRC-Servern - und weder Du noch die anderen Benutzer wissen, wer 
