changes to spanish by user
Monotone-Parent: 2b6796ec489ee102f2cba2f1e13916200f508463
Monotone-Revision: 5470ed138824fc634e47328eff6619cedd98d5bd

Monotone-Author: m1xxy@mail.i2p
Monotone-Date: 2010-11-16T18:32:42
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme_es.html
+++ b/installer/resources/readme/readme_es.html
@@ -30,7 +30,7 @@
  <li class="tidylist">y mucho m&aacute;s</li>
 </ul>
 
-<h2>&iquest;Quieres tener tu propa p&aacute;gina I2P?</h2>
+<h2>&iquest;Quieres tener tu propia p&aacute;gina I2P?</h2>
 
 <p>El paquete I2P contiene programas que te facilitan manejar tu propia p&aacute;gina I2P: Una instancia de  
 <a href="http://jetty.mortbay.org/">Jetty</a> enlaza con 
