Readme: Insert missing </div> to fix positional issues with langbar.
Monotone-Parent: 3fe5eab8923e2f6f41f0c0fe219aec7349bc8a99
Monotone-Revision: edc923fb03834a90710c72b8a3fb206cfb904e86

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-19T14:41:08
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -1,5 +1,7 @@
+<div lang="en">
 <div align="right"> 
-  <div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> 
+  <div class="langbox" align="right">
+    <a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> 
     <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="中文" alt="中文"></a> 
     <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> 
     <a href="/index.jsp?lang=fr"><img src="/flags.jsp?c=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"></a> 
@@ -7,6 +9,7 @@
     <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> 
     <a href="/index.jsp?lang=ru"><img src="/flags.jsp?c=ru" title="Русский" alt="Русский"></a> 
     <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
+  </div>
 </div>
 <div class="welcome"><h2>Welcome to I2P!</h2></div>
 <p>If you've just started I2P, the Active: numbers on the left should start to 
